# funcially

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  demo_text.txt  documentation.md  gui.js  gui_bg.wasm  index.html
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  clean-pr-pages.yml  code-analysis.yml  pages-experimental.yml  pages-main.yml  pages.yml  pr-pages.yml
assets/: manifest.json  sw.js
calculator/: Cargo.toml  build.rs  documentation.md  unit_data.txt
calculator/calculator/: Cargo.toml
calculator/calculator/src/astgen/: mod.rs  objects.rs
calculator/cli/: Cargo.toml
calculator/cli/src/: main.rs
calculator/core/: Cargo.toml  build.rs
calculator/core/src/: color.rs  common.rs  lib.rs  settings.rs
calculator/core/src/astgen/: tokenizer.rs
calculator/core/src/environment/: currencies.rs  mod.rs
calculator/dart_bridge/: Cargo.toml  backtrace.txt  bind_header.h  bind_header_bundling_function.h
calculator/dart_bridge/dart_bridge.xcodeproj/: project.pbxproj
calculator/dart_bridge/dart_bridge.xcodeproj/project.xcworkspace/xcuserdata/dg.xcuserdatad/: UserInterfaceState.xcuserstate
calculator/dart_bridge/dart_bridge.xcodeproj/xcuserdata/dg.xcuserdatad/xcschemes/: xcschememanagement.plist
calculator/dart_bridge/src/: lib.rs
calculator/gui/: Cargo.toml
calculator/gui/assets/: manifest.json  sw.js
calculator/gui/installers/macos/funcially.app/Contents/: Info.plist
calculator/gui/src/: main.rs
calculator/gui/src/widgets/: helpers.rs  mod.rs
calculator/src/: color.rs  common.rs  engine.rs  lib.rs  settings.rs
calculator/src/astgen/: ast.rs  objects.rs  parser.rs  tokenizer.rs
calculator/src/environment/: currencies.rs  mod.rs  units.rs
cli/: Cargo.toml
cli/src/: main.rs
discord/: Cargo.toml
discord/src/: main.rs
frontend/: .gitignore  .metadata  ffigen.yaml  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/de/david072/apps/frontend/: MainActivity.kt
frontend/android/app/src/main/kotlin/de/david072/apps/funcially/: MainActivity.kt
frontend/android/app/src/main/res/values/: styles.xml
frontend/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: calculator_bindings.dart  main.dart
frontend/lib/pages/: home_page.dart  plot_page.dart  settings_page.dart
frontend/lib/util/: coloring_text_editing_controller.dart  menu_entry.dart  util.dart
frontend/lib/widgets/: custom_keyboard.dart  plot.dart  resizable_container.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
gui/: Cargo.toml  build.rs  index.html
gui/assets/: manifest.json  manifest_experimental.json  sw.js  sw_experimental.js
gui/assets/experimental/: sw.js
gui/installer/macos/axioma.app/Contents/: Info.plist
gui/installer/macos/axioma.app/Contents/Resources/: AppIcon.icns
gui/installer/wix/: axioma.rc  axioma.wxs  license.rtf
gui/installers/wix/: axioma.wxs  funcially.wxs
gui/src/: main.rs
gui/src/widgets/: helpers.rs  mod.rs
pr15/: gui_bg.wasm  index.html
src/: calculator.rs  main.rs
src/calculator/: ast.rs  color.rs  common.rs  engine.rs  functions.rs  mod.rs  parser.rs  tokenizer.rs  units.rs  variables.rs
src/calculator/astgen/: ast.rs  mod.rs  parser.rs  tokenizer.rs
src/calculator/environment/: currencies.rs  functions.rs  mod.rs  units.rs  variables.rs
