[package]
name = "calculator"
version = "0.0.1"
authors = ["david072"]
description = "A calculator working with text inputs."

[lib]
name = "calculator"
path = "src/calculator/mod.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/bin/main_gui.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
rust_decimal = "1.26.1"
eframe = "0.19.0"
clipboard = "0.5.0"