[package]
name = "calculator"
version = "0.0.1"
authors = ["david072"]
description = "A calculator working with text inputs."

[lib]
name = "calculator"
path = "src/calculator/mod.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/bin/main_gui.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
rust_decimal = "1.26.1"
eframe = "0.19.0"
thiserror = "1.0.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[profile.release]
opt-level = 2 # fast and small wasm