[package]
name = "calculator"
version = "0.3.0"
authors = ["david072"]
description = "A calculator working with text inputs."
edition = "2018"
default-run = "gui"

[lib]
name = "calculator"
path = "src/calculator/mod.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/bin/main_gui.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
rust_decimal = "1.26.1"
eframe = { version = "0.19.0", features = ["persistence"] }
thiserror = "1.0.32"
colored = "2.0.0"
phf = { version = "0.11.1", features = ["macros"] }
dirs = "4.0.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
rand = "0.8.5"
backtrace = "0.3.66"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[profile.release]
opt-level = 2 # fast and small wasm

[build-dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
