[package]
name = "calculator"
authors = ["david072"]
version = "1.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
strum = { version = "0.24.1", features = ["derive"] }
rust_decimal = "1.26.1"
thiserror = "1.0.32"
phf = { version = "0.11.1", features = ["macros"] }
dirs = "4.0.0"
reqwest = { version = "0.11.12", features = ["json", "default"] }
serde = { version = "1.0.144", features = ["derive"] }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Storage", "Window"] }

[build-dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
