[package]
name = "discord"
authors = ["david072"]
version = "1.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
calculator = { path = "../calculator" }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
chrono = "0.4.22"
serde = "1.0.145"
ron = "0.8.0"
