[package]
name = "gui"
authors = ["david072"]
version = "0.4.1"
edition = "2021"

[dependencies]
calculator = { path = "../calculator" }
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1.0.144", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
