[package]
name = "gui"
authors = ["david072"]
version = "1.0.0"
edition = "2021"
exclude = ["installers/macos/*"]

[features]
experimental = []

[dependencies]
calculator = { path = "../calculator" }
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1.0.144", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.24.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.3"
