[package]
name = "gui"
authors = ["david072"]
version = "1.2.0"
edition = "2021"
exclude = ["installers/macos/*"]
rust-version = "1.65.0"

[features]
experimental = []

[dependencies]
calculator = { path = "../calculator" }
eframe = { version = "0.20.1", features = ["persistence"] }
serde = { version = "1.0.144", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.12", features = ["json", "default"] }
version-compare = "0.1.1"
smol = "1.2.5"
image = "0.24.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.3"
