[package]
name = "funcially_core"
authors = ["david072"]
version = "1.3.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
thiserror = "1.0.32"
phf = { version = "0.11.1", features = ["macros"] }
dirs = "5.0.0"
reqwest = { version = "0.11.12", features = ["json", "default", "blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Storage", "Window"] }

[build-dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
